# LGPD-GPT---PI

./: app.py  pyproject.toml  requirements.txt  secrets.toml  streamlit_app.py
utils/: chatBot.py  text.py
vectorstore/: index.faiss  index.pkl
