[tool.poetry]
name = "Chatbot-LGPD"
version = "0.1.0"
description = "Chatbot para auxiliar na adequação à LGPD"
authors = ["maellson <mqmaellson39@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.13"
streamlit = "1.31.1"
python-dotenv = "^1.0.1"
langchain-openai = "^0.0.6"
pypdf2 = "^3.0.1"
streamlit-chat = "^0.1.1"
faiss-cpu = "1.7.4"
langchain = "0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
